自定义标题

--- a/app/src/main/res/layout/show_1_activity.xml
+++ b/app/src/main/res/layout/show_1_activity.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+    <com.coinvs.testsurfaceview.CustomTitleBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title_text="标题1">
+
+    </com.coinvs.testsurfaceview.CustomTitleBar>
 
     <com.coinvs.testsurfaceview.LayerView
         android:layout_width="match_parent"
