--- a/app/src/main/res/layout/activity_rebound.xml
+++ b/app/src/main/res/layout/activity_rebound.xml
@@ -8,6 +8,10 @@
     tools:context=".MainActivity">
 
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <com.coinvs.testsurfaceview.ReboundScrollView
         android:id="@+id/rebound"
         android:layout_width="match_parent"
@@ -53,4 +57,11 @@
             android:background="@color/colorAccent"></View>-->
     </com.coinvs.testsurfaceview.ReboundScrollView>
 
+
+        <com.coinvs.testsurfaceview.BreatheView
+            android:id="@+id/brv"
+            app:duration="2000"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 </LinearLayout>
