--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,4 +14,8 @@
         <attr name="left_button_text_color" format="color" />
         <attr name="left_button_drawable" format="reference|integer" />
     </declare-styleable>
+
+    <declare-styleable name="BreatheView">
+        <attr name="duration" format="integer"></attr>
+    </declare-styleable>
 </resources>
