--- a/app/src/main/res/layout/activity_rebound.xml
+++ b/app/src/main/res/layout/activity_rebound.xml
@@ -66,6 +66,12 @@
 
         android:background="@drawable/home_page_background">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dig_icon"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
 
 
     </com.coinvs.testsurfaceview.PullView>
